# xautocode

./: .gitignore  CMakeLists.txt
include/xautocode/: CodeGenerator.h  CommandLine.h
include/xautocode/FileStrategy/: FileStrategy.h  HeaderdirSourcedirRecursiveStrategy.h  HeaderdirSourcedirStrategy.h  HeaderdirSourcefileStrategy.h  HeaderfileSourcedirStrategy.h  HeaderfileSourcefileStrategy.h  SourcedirStrategy.h
include/xautocode/Generator/: CodeGenerator.h  FileException.h  HeaderFile.h  SourceFile.h
src/: CodeGenerator.cpp  CommandLine.cpp  main.cpp
src/FileStrategy/: FileStrategy.cpp  HeaderdirSourcedirRecursiveStrategy.cpp  HeaderdirSourcedirStrategy.cpp  HeaderdirSourcefileStrategy.cpp  HeaderfileSourcedirStrategy.cpp  HeaderfileSourcefileStrategy.cpp  SourcedirStrategy.cpp
src/Generator/: CodeGenerator.cpp  FileException.cpp  HeaderFile.cpp  SourceFile.cpp
